code fix for optional redirect URL field and image handling in adaptive card

--- a/Manifest/manifest_sme.json
+++ b/Manifest/manifest_sme.json
@@ -77,7 +77,8 @@
           "parameters": [
             {
               "name": "searchText",
-              "title": "Search"
+              "title": "Search",
+              "description": "Search tickets"
             }
           ],
           "context": [
@@ -94,12 +95,12 @@
           "parameters": [
             {
               "name": "searchText",
-              "title": "Search"
+              "title": "Search",
+              "description": "Search tickets"
             }
           ],
           "context": [
-            "compose",
-            "commandBox"
+            "compose"
           ],
           "initialRun": true
         },
@@ -111,7 +112,8 @@
           "parameters": [
             {
               "name": "searchText",
-              "title": "Search"
+              "title": "Search",
+              "description": "Search tickets"
             }
           ],
           "context": [
