--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Common/Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Common/Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Azure.Search" Version="9.1.0" />
     <PackageReference Include="Microsoft.Bot.Schema" Version="4.6.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
