--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
@@ -1,6 +1,7 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "AzureWebJobsStorage": "",
     "AzureWebJobsDashboard": "",
     "QnAMakerSubscriptionKey": "",
     "QnAMakerApiUrl": "",
