--- a/Manifest/manifest_enduser.json
+++ b/Manifest/manifest_enduser.json
@@ -5,26 +5,26 @@
   "id": "aba30cfc-05df-4002-b956-a70996b12a54",
   "packageName": "com.microsoft.teams.faqplus",
   "developer": {
-    "name": "<<companyName>>",
-    "websiteUrl": "<<websiteUrl>>",
-    "privacyUrl": "<<privacyUrl>>",
-    "termsOfUseUrl": "<<termsOfUseUrl>>"
+    "name": "Kat Hopkins",
+    "websiteUrl": "https://m365x388302.sharepoint.com/",
+    "privacyUrl": "https://m365x388302.sharepoint.com/SitePages/PrivacyStatement.aspx",
+    "termsOfUseUrl": "https://m365x388302.sharepoint.com/SitePages/ServicesAgreement.aspx"
   },
   "icons": {
     "color": "color.png",
     "outline": "outline.png"
   },
   "name": {
-    "short": "FAQ Plus [V2]"
+    "short": "EndUser ISV FAQ+[V2]"
   },
   "description": {
-    "short": "A friendly FAQ bot that answers questions and connects you to experts.",
-    "full": "A friendly question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available."
+    "short": "EndUser ISV FAQ bot that answers questions and connects to experts",
+    "full": "EndUser ISV question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available."
   },
   "accentColor": "#64A2CC",
   "bots": [
     {
-      "botId": "<<botId>>",
+      "botId": "37aa651b-ac8a-4b7f-9157-20de018f3245",
       "scopes": [
         "personal",
         "team"
@@ -58,7 +58,7 @@
     {
       "entityId": "help",
       "name": "Help",
-      "contentUrl": "https://<<appDomain>>/help?theme={theme}",
+      "contentUrl": "https://IsvChecklistFaq.azurewebsites.net/help?theme={theme}",
       "scopes": [
         "personal"
       ]
@@ -69,6 +69,6 @@
     "messageTeamMembers"
   ],
   "validDomains": [
-    "<<appDomain>>"
+    "IsvChecklistFaq.azurewebsites.net"
   ]
 }
