modify manifest_enduser.json and manifest_sme.json

--- a/Manifest/manifest_enduser.json
+++ b/Manifest/manifest_enduser.json
@@ -1,74 +1,76 @@
 {
-  "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.5/MicrosoftTeams.schema.json",
-  "manifestVersion": "1.5",
-  "version": "1.0.0",
-  "id": "aba30cfc-05df-4002-b956-a70996b12a54",
-  "packageName": "com.microsoft.teams.faqplus",
-  "developer": {
-    "name": "<<companyName>>",
-    "websiteUrl": "<<websiteUrl>>",
-    "privacyUrl": "<<privacyUrl>>",
-    "termsOfUseUrl": "<<termsOfUseUrl>>"
-  },
-  "icons": {
-    "color": "color.png",
-    "outline": "outline.png"
-  },
-  "name": {
-    "short": "FAQ Plus [V2]"
-  },
-  "description": {
-    "short": "A friendly FAQ bot that answers questions and connects you to experts.",
-    "full": "A friendly question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available."
-  },
-  "accentColor": "#64A2CC",
-  "bots": [
-    {
-      "botId": "<<botId>>",
-      "scopes": [
-        "personal",
-        "team"
-      ],
-      "commandLists": [
+    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.6/MicrosoftTeams.schema.json",
+    "manifestVersion": "1.6",
+    "version": "1.0.0",
+    "showLoadingIndicator": false,
+    "id": "8b7a7472-7d12-4a61-b311-235e3a056804",
+    "packageName": "com.ubisoft.teams.dolphin",
+    "developer": {
+        "name": "Chen Qiang(River)",
+        "websiteUrl": "https://mdc-web-tomcat17.ubisoft.org/confluence/display/CTUPS/Product+No.001+-+Troubleshooting",
+        "privacyUrl": "https://micorsoft.com",
+        "termsOfUseUrl": "https://micorsoft.com"
+    },
+    "icons": {
+        "color": "color.png",
+        "outline": "outline.png"
+    },
+    "name": {
+        "short": "Dolphin",
+        "full": " New Dolphin for Teams"
+    },
+    "description": {
+        "short": "A friendly FAQ bot that answers questions and connects you to experts.",
+        "full": "A friendly question and answer bot that answers commonly asked questions. If it can't answer, it will put you in touch with an expert as soon as they are available."
+    },
+    "accentColor": "#64A2CC",
+    "staticTabs": [
         {
-          "scopes": [
-            "personal"
-          ],
-          "commands": [
-            {
-              "title": "Take a tour",
-              "description": "Tour of key features"
-            },
-            {
-              "title": "Ask an expert",
-              "description": "Connect with an expert"
-            },
-            {
-              "title": "Share feedback",
-              "description": "Send feedback"
-            }
-          ]
+            "entityId": "help",
+            "name": "Help",
+            "contentUrl": "https://dolphinfaqplus.azurewebsites.net/help?theme={theme}",
+            "scopes": [
+                "personal"
+            ]
         }
-      ],
-      "supportsFiles": false,
-      "isNotificationOnly": false
-    }
-  ],
-  "staticTabs": [
-    {
-      "entityId": "help",
-      "name": "Help",
-      "contentUrl": "https://<<appDomain>>/help?theme={theme}",
-      "scopes": [
-        "personal"
-      ]
-    }
-  ],
-  "permissions": [
-    "identity",
-    "messageTeamMembers"
-  ],
-  "validDomains": [
-    "<<appDomain>>"
-  ]
+    ],
+    "bots": [
+        {
+            "botId": "eda1200f-ef7c-4439-a002-9aa40035dc28",
+            "scopes": [
+                "personal",
+                "team"
+            ],
+            "commandLists": [
+                {
+                    "scopes": [
+                        "personal"
+                    ],
+                    "commands": [
+                        {
+                            "title": "Take a tour",
+                            "description": "Tour of key features"
+                        },
+                        {
+                            "title": "Ask an expert",
+                            "description": "Connect with an expert"
+                        },
+                        {
+                            "title": "Share feedback",
+                            "description": "Send feedback"
+                        }
+                    ]
+                }
+            ],
+            "supportsFiles": false,
+            "isNotificationOnly": false
+        }
+    ],
+    "permissions": [
+        "identity",
+        "messageTeamMembers"
+    ],
+    "validDomains": [
+        "dolphinfaqplus.azurewebsites.net"
+    ]
 }
