Pull request comments fix

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Microsoft.Teams.Apps.FAQPlusPlus.Configuration.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Microsoft.Teams.Apps.FAQPlusPlus.Configuration.csproj
@@ -260,9 +260,9 @@
     <AdditionalFiles Include="..\stylecop.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\GlobalSuppressions.cs">
+    <!--<Compile Include="..\GlobalSuppressions.cs">
       <Link>Properties\GlobalSuppressions.cs</Link>
-    </Compile>
+    </Compile>-->
     <Compile Include="App_Start\AutofacConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -288,7 +288,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include=".gitignore" />
     <Content Include="Content\customizableStyle.css" />
     <Content Include="Content\spinner.css" />
     <Content Include="Global.asax" />
