Removing v2 in all the documentation files

--- a/Manifest/manifest_enduser.json
+++ b/Manifest/manifest_enduser.json
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "FAQ Plus [V2]"
+    "short": "FAQ Plus"
   },
   "description": {
     "short": "A friendly FAQ bot that answers questions and connects you to experts.",
