--- a/Manifest/manifest_sme.json
+++ b/Manifest/manifest_sme.json
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "FAQ Plus [V2] (Experts Team)"
+    "short": "FAQ Plus (Experts Team)"
   },
   "description": {
     "short": "A friendly FAQ bot that answers questions and connects you to experts.",
