--- a/Manifest/manifest_sme.json
+++ b/Manifest/manifest_sme.json
@@ -36,7 +36,7 @@
           ],
           "commands": [
             {
-              "title": "Take a tour",
+              "title": "Take a tour test",
               "description": "Tour of key features"
             },
             {
