--- a/Manifest/manifest_enduser.json
+++ b/Manifest/manifest_enduser.json
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "FAQ Plus [V2]"
+    "short": "FAQ Plus"
   },
   "description": {
     "short": "A friendly FAQ bot that answers questions and connects you to experts.",
@@ -36,20 +36,16 @@
           ],
           "commands": [
             {
-              "title": "Tour por Teams",
-              "description": "Recorrido por las características de Teams"
+              "title": "Take a tour",
+              "description": "Tour of key features"
             },
             {
-              "title": "Preguntale a un Experto",
-              "description": "Conectar con un experto"
+              "title": "Ask an expert",
+              "description": "Connect with an expert"
             },
-			{
-              "title": "Ir a MiCatalogo",
-              "description": "Acceder a la web de MiCatalogo"
-            },			
             {
-              "title": "Comparte tus comentarios",
-              "description": "Enviar comentarios"
+              "title": "Share feedback",
+              "description": "Send feedback"
             }
           ]
         }
