add recommend feature

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -16,5 +16,7 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
-  "ApplicationInsightsLogLevel": ""
+  "ApplicationInsightsLogLevel": "",
+  "RecommendationIntervalInMinutes": 2,
+  "RecommendationContinousFailureTimes": 2
 }
