--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -18,5 +18,6 @@
   },
   "ApplicationInsightsLogLevel": "",
   "RecommendationIntervalInMinutes": 2,
-  "RecommendationContinousFailureTimes": 2
+  "RecommendationContinousFailureTimes": 2,
+  "APPId": ""
 }
