Add CheckSLA function PrepareToSend Function works Send Function works DataAggretration Function works

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Microsoft.Teams.Apps.FAQPlusPlus.Common\Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj" />
     <ProjectReference Include="..\Microsoft.Teams.Apps.FAQPlusPlus.FunctionCommon\Microsoft.Teams.Apps.FAQPlusPlus.AzureFunctionCommon.csproj" />
   </ItemGroup>
   <ItemGroup>
