add some parameter to notification SLA. the flow runs successfully on dev and prod environment

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Microsoft.Teams.Apps.FAQPlusPlus.Configuration.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/Microsoft.Teams.Apps.FAQPlusPlus.Configuration.csproj
@@ -326,6 +326,7 @@
     <Content Include="Views\Shared\_Spinner.cshtml" />
     <Content Include="Views\Home\_SLA.cshtml" />
     <None Include="Properties\PublishProfiles\dev-dolphin-config - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\prod-dolphin-config - Web Deploy.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Strings.resx">
