Localization support for 10 cultures - /Deployment - updated ARM deployment file to add new supported culture and provide default culture option for installers - /Manifest - created 2 seperate folders for End user and SME users along with localized JSON files - /Source - modified source code to handle user localized commands for bot, ME and tab capabilities. Application will be able to detect user locale and if supported will show the content accordingly.

--- a/Manifest/EndUser/manifest.json
+++ b/Manifest/EndUser/manifest.json
@@ -10,6 +10,59 @@
     "privacyUrl": "<<privacyUrl>>",
     "termsOfUseUrl": "<<termsOfUseUrl>>"
   },
+  "localizationInfo": {
+    "defaultLanguageTag": "en-US",
+    "additionalLanguages": [
+      {
+        "languageTag": "en-US",
+        "file": "en-US.json"
+      },
+      {
+        "languageTag": "de-DE",
+        "file": "de-DE.json"
+      },
+      {
+        "languageTag": "fr-FR",
+        "file": "fr-FR.json"
+      },
+      {
+        "languageTag": "ar-SA",
+        "file": "ar-SA.json"
+      },
+      {
+        "languageTag": "ja-JP",
+        "file": "ja-JP.json"
+      },
+      {
+        "languageTag": "es-ES",
+        "file": "es-ES.json"
+      },
+      {
+        "languageTag": "he-IL",
+        "file": "he-IL.json"
+      },
+      {
+        "languageTag": "ko-KR",
+        "file": "ko-KR.json"
+      },
+      {
+        "languageTag": "pt-BR",
+        "file": "pt-BR.json"
+      },
+      {
+        "languageTag": "ru-RU",
+        "file": "ru-Ru.json"
+      },
+      {
+        "languageTag": "zh-CN",
+        "file": "zh-CN.json"
+      },
+      {
+        "languageTag": "zh-TW",
+        "file": "zh-TW.json"
+      }
+    ]
+  },
   "icons": {
     "color": "color.png",
     "outline": "outline.png"
