--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -8,6 +8,10 @@
   "ScoreThreshold": "0.5",
   "StorageConnectionString": "",
   "AppBaseUri": "",
+  "i18n": {
+    "DefaultCulture": "en-US",
+    "SupportedCultures": "en-US,ar-SA,de-DE,es-ES,fr-FR,he-IL,ja-JP,ko-KR,pt-BR,ru-RU,zh-CN,zh-TW"
+  },
   "SearchServiceName": "",
   "SearchServiceAdminApiKey": "",
   "SearchServiceQueryApiKey": "",
