--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/packages.config
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Configuration/packages.config
@@ -40,14 +40,14 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net47" />
-  <package id="System.IO" version="4.1.0" targetFramework="net47" />
+  <package id="System.IO" version="4.1.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Memory" version="4.5.3" targetFramework="net47" />
   <package id="System.Net.Http" version="4.1.1" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
-  <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net47" />
+  <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net471" />
