--- a/Manifest/EndUser/manifest.json
+++ b/Manifest/EndUser/manifest.json
@@ -51,7 +51,7 @@
       },
       {
         "languageTag": "ru-RU",
-        "file": "ru-Ru.json"
+        "file": "ru-RU.json"
       },
       {
         "languageTag": "zh-CN",
