Fixed Search Service issue for supporting GCC High tenants

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.AzureFunction/local.settings.json
@@ -8,6 +8,7 @@
     "StorageConnectionString": "",
     "SearchServiceName": "",
     "SearchServiceAdminApiKey": "",
-    "SearchServiceQueryApiKey": ""
+    "SearchServiceQueryApiKey": "",
+    "IsGCCHybridDeployment": false
   }
 }
