--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -9,8 +9,8 @@
   "StorageConnectionString": "",
   "AppBaseUri": "",
   "i18n": {
-    "DefaultCulture": "en-US",
-    "SupportedCultures": "en-US,ar-SA,de-DE,es-ES,fr-FR,he-IL,ja-JP,ko-KR,pt-BR,ru-RU,zh-CN,zh-TW"
+    "DefaultCulture": "en",
+    "SupportedCultures": "en,ar,de,es,fr,he,ja,ko,pt,ru,zh-CN,zh-TW"
   },
   "SearchServiceName": "",
   "SearchServiceAdminApiKey": "",
