--- a/Manifest/SME/manifest.json
+++ b/Manifest/SME/manifest.json
@@ -46,8 +46,8 @@
         "file": "ko.json"
       },
       {
-        "languageTag": "pt",
-        "file": "pt.json"
+        "languageTag": "pt-BR",
+        "file": "pt-BR.json"
       },
       {
         "languageTag": "ru",
