--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -10,7 +10,7 @@
   "AppBaseUri": "",
   "i18n": {
     "DefaultCulture": "en",
-    "SupportedCultures": "en,ar,de,es,fr,he,ja,ko,pt,ru,zh-CN,zh-TW"
+    "SupportedCultures": "en,ar,de,es,fr,he,ja,ko,pt-BR,ru,zh-CN,zh-TW"
   },
   "SearchServiceName": "",
   "SearchServiceAdminApiKey": "",
