Sos integration: could create sos and resolve manually

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus.Common/Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus.Common/Microsoft.Teams.Apps.FAQPlusPlus.Common.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
