--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/appsettings.json
@@ -8,6 +8,10 @@
   "ScoreThreshold": "0.5",
   "StorageConnectionString": "",
   "AppBaseUri": "",
+  "i18n": {
+    "DefaultCulture": "en",
+    "SupportedCultures": "en,ar,de,es,fr,he,ja,ko,pt-BR,ru,zh-CN,zh-TW"
+  },
   "SearchServiceName": "",
   "SearchServiceAdminApiKey": "",
   "SearchServiceQueryApiKey": "",
